<resources>
    <string name="app_name">Zoomerbox</string>
    <string name="smsSignInText">Вход по СМС</string>
    <string name="orderDetails">Детали заказа</string>
    <string name="verifyCode">Подтвердите код из СМС</string>
    <string name="inputPhoneNumberText">Введите номер мобильного телефона. Мы отправим одноразовый код в СМС.</string>
    <string name="inputSmsCodeText">Введите 6-значный код, который пришёл на ваш телефон.</string>
    <string name="smsSignInDisclaimerText">Запросив код, вы принимаете пользовательское соглашение и политику конфиденциальности магазина.</string>
    <string name="getSmsCodeText">Получить код</string>
    <string name="verifyCodeBtn">Подтвердить код</string>
    <string name="addToCartBtn">Добавить в корзину</string>
    <string name="toMainButton">На главную</string>
    <string name="showAllOrders">Посмотреть все заказы</string>
    <string name="phoneCodePlacheloder">+7</string>
    <string name="sendOnceMore">Отправить еще раз</string>
    <string name="shop_icon">shop_icon</string>
    <string name="trolley_icon">trolley_icon</string>
    <string name="user_icon">user_icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="box_preview">Box preview</string>
    <string name="banner_image">Banner image</string>
    <string name="lorem">"On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."</string>
    <string name="favourite_button">favourite button</string>
    <string name="description">Описание</string>
    <string name="like">Добавить в избранное</string>
    <string name="remove">Удалить</string>
    <string name="bin">Корзина</string>
    <string name="select_all">Выбрать все</string>
    <string name="remove_selected">Удалить выбранные</string>
    <string name="create_order">Оформить заказ</string>
    <string name="containing">Содержимое</string>
    <string name="item_is_included">Входит в бокс: %1$s</string>
    <string name="order_by_date">Заказ от %1$s</string>
    <string name="item_nice_amount">%1$s шт.</string>
    <string name="item_amount">%1$s</string>
    <string name="item_count">%1$s %2$s</string>
    <string name="money_amount">%1$s руб.</string>
    <string name="favourite">Избранное</string>
    <string name="settings">Настройки приложения</string>
    <string name="signout">Выход</string>
    <string name="my_orders">Мои заказы</string>
    <string name="updates">Обновления</string>
    <string name="user_avatar">Аватар</string>
    <string name="nothing_in_favourite">Вы пока ничего не добавили в избранное</string>
    <string name="nothing_in_orders">Вы пока не создали ни одного заказа</string>
    <string name="order_sum">Сумма заказа:</string>
    <string name="confirm_order">Подтвердить заказ</string>
    <string name="enter_full_name">Введите ФИО</string>
    <string name="setlement">Населенный пункт</string>
    <string name="post_index">Почтовый индекс</string>
    <string name="order_contains">Состав заказа</string>
    <string name="full_name">Полное имя</string>
    <string name="post_index_placeholder">Введите почтовый индекс</string>
    <string name="cache_header">Настройки кэша</string>
    <string name="clear_cache_key">clear_cache</string>
    <string name="clear_cache">Очистить кэш</string>
    <string name="cache_off_summary">Когда кэш,отключен, мы не сможем показывать вам корзину без подключения к интернету</string>
    <string name="cache_on_summary">Мы кэшируем товары в вашей корзине, чтобы вы могли их просматривать даже без интернета</string>
    <string name="cache_switch">Кэшировать товары в корзине</string>

    <plurals name="plurals">
        <item quantity="zero">нет боксов</item>
        <item quantity="one">%1$d бокс</item>
        <item quantity="two">%1$d бокса</item>
        <item quantity="few">%1$d бокса</item>
        <item quantity="many">%1$d боксов</item>
        <item quantity="other">%1$d боксов</item>
    </plurals>
</resources>