<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.view.activity.ZoomerBoxActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:minHeight="60dp"
            app:layout_scrollFlags="scroll"
            app:toolbarId="@+id/toolbar">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageSwitcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:id="@+id/dotsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingBottom="128dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/zoomerBoxTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaabold"
                android:textColor="@color/dark"
                android:textSize="24sp"
                tools:text="Geekbox" />

            <TextView
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaaregular"
                android:textSize="24sp"
                tools:text="4200 руб." />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addToCartBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_ripple"
                android:fontFamily="@font/comfortaaregular"
                android:text="@string/addToCartBtn"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/insideLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/comfortaabold"
                android:text="@string/containing"
                android:textColor="@color/dark"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/boxItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaabold"
                android:text="@string/description"
                android:textColor="@color/dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/boxDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/comfortaaregular"
                tools:text="@string/lorem" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/favourite_button"
        app:borderWidth="0dp"
        app:fabCustomSize="64dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/nonhearticon" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>