<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activity.SignInActivity">

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/waveLoadingView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:wlv_borderColor="@color/purple_200"
        app:wlv_round_rectangle="true"
        app:wlv_shapeType="rectangle"
        app:wlv_triangle_direction="north"
        app:wlv_progressValue="80"
        app:wlv_waveAmplitude="50"
        app:wlv_waveColor="@color/purple_200" />

    <ImageView
        android:id="@+id/logoText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        app:srcCompat="@drawable/logotext" />

    <TextView
        android:id="@+id/smsHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/smsSignInText"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/comfortaaregular"
        android:text="@string/inputPhoneNumberText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/smsHint"
        app:layout_constraintTop_toBottomOf="@+id/smsHint" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaaregular"
        android:text="@string/smsSignInDisclaimerText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumberText"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />

    <EditText
        android:id="@+id/phoneNumberText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_input_shape"
        android:digits="0123456789"
        android:ems="10"
        android:fontFamily="@font/comfortaaregular"
        android:inputType="number"
        android:maxLength="10"
        android:textColorHighlight="@color/purple_700"
        android:textColorLink="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="9522789535" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/comfortaaregular"
        android:gravity="center"
        android:text="@string/phoneCodePlacheloder"
        android:textAlignment="center"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNumberText"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/phoneNumberText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyPhoneBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_ripple"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/getSmsCodeText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumberText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortamedium"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="@+id/verifyPhoneBtn"
        app:layout_constraintTop_toBottomOf="@+id/verifyPhoneBtn"
        tools:text="Только не ошибки..." />

</androidx.constraintlayout.widget.ConstraintLayout>